Create course-service to manage courses and lessons

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8888
+#Logging :
+logging.config=classpath:log4j2-spring.xml
+logging.file.name=logs/mylog.log
+spring.datasource.hikari.driver-class-name=org.h2.Driver
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:coursedb
+spring.h2.console.enabled=true
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
